Code refactoring
Signed-off-by: Andrew Stephens <a144185i@gmail.com>